--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,11 @@
 [tool.poetry]
 name = "bgg4py"
-version = "0.1.0"
+version = "0.0.1"
 description = ""
+readme = "README.md"
+repository = "https://github.com/hiroaqii/bgg4py"
 authors = ["hiroaqii <hiroaqii@gmail.com>"]
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -22,4 +25,3 @@ line-length = 120
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
